--- a/sytles.css
+++ b/sytles.css
@@ -1,3 +1,24 @@
+/* Consideraciones generales de la fuente */
+
 html{
-    font-family: Verdana, Geneva, Tahoma, sans-serif
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    background-color: beige;
+}
+
+h1{font-size: 30px ;}
+h2{font-size: 25px;}
+h3{font-size: 20px;}
+
+/*Configuracion de las secciones de la pagina */
+
+header {
+    color: white;
+    background-color: black;
+    }
+
+footer {
+    color:white;
+    align-self: center;
+    background-color: black;
 }
